css/style.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
  }
  
  header {
    background-color: #222;
    color: #fff;
    padding: 20px;
    text-align: center;
  }
  
  nav a {
    color: #fff;
    text-decoration: none;
    margin: 0 15px;
    font-weight: bold;
  }
  
  .hero {
    background-size: cover;
    background-position: center;
    color: #fff;
    text-align: center;
    padding: 80px 20px;
    position: relative;
  }
  
  .hero::after {
    content: "";
    position: absolute;
    top: 0; left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.4);
    z-index: 1;
  }
  
  .hero h2, .hero p {
    position: relative;
    z-index: 2;
  }
  
  
  .section {
    padding: 40px 20px;
    text-align: center;
  }
  
  footer {
    background-color: #222;
    color: #fff;
    text-align: center;
    padding: 20px;
    margin-top: 20px;
  }
  

